--- a/sentiment_analysis_backend/templates/admin/env_vars.html
+++ b/sentiment_analysis_backend/templates/admin/env_vars.html
@@ -1,6 +1,11 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
+{% if error_message %}
+    <div class="alert alert-warning">
+        {{ error_message }}
+    </div>
+{% endif %}
     <h1>Environment Variables</h1>
     <div class="table-responsive">
         <table class="table table-bordered table-striped dataTable">
@@ -21,5 +26,7 @@
         </table>
     </div><br>
     <a href="/" class="btn btn-danger">Back to main</a>
+    {% if error_message ==none %}
     <a href="{{ url_for('edit_env_vars') }}" class="btn btn-dark">Edit Environment</a>
+    {% endif %}
 {% endblock %}
